--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
+    "css-loader": "^0.27.3",
     "extract-text-webpack-plugin": "^2.1.0",
+    "style-loader": "^0.16.0",
     "webpack": "^2.3.0"
   }
 }
